unpackaged/main/default/objects/Opportunity/fields/Customer_Study__c.field-meta.xml
<CustomField>
    <fullName>Customer_Study__c</fullName>
    <label>Customer Study #</label>
    <length>255</length>
    <type>Text</type>
</CustomField>