unpackaged/main/default/objects/Opportunity/fields/Cut_Off_Notice_Sent_30Day__c.field-meta.xml
<CustomField>
    <fullName>Cut_Off_Notice_Sent_30Day__c</fullName>
    <description>This Field will track the delinquent accounts that we've sent 30-Day cut off notices to.  The notice will give them 30 days to send a PO for past due renewals or have those modules disabled.</description>
    <label>30 Day Cut-Off Notice Sent?</label>
    <type>Date</type>
</CustomField>