unpackaged/main/default/objects/Opportunity/fields/Date_Cancellation_Letter_Is_Received__c.field-meta.xml
<CustomField>
    <fullName>Date_Cancellation_Letter_Is_Received__c</fullName>
    <description>Field that will capture the date a cancellation letter is received at the hospital.    We will learn the date from the UPS tracking or certified mail and then populate the date in this field.  This will initially be used in the "backlog project"</description>
    <label>Date Cancellation Letter Is Received</label>
    <type>Date</type>
</CustomField>