unpackaged/main/default/objects/Opportunity/fields/Date_Cancellation_Letter_Sent__c.field-meta.xml
<CustomField>
    <fullName>Date_Cancellation_Letter_Sent__c</fullName>
    <description>Date field that will capture the date a Order cancellation letter is sent.   Will be used initially to capture the dates letters go out as part of the "backlog project"</description>
    <label>Date Cancellation Letter Sent</label>
    <type>Date</type>
</CustomField>