unpackaged/main/default/objects/Opportunity/fields/Date_Fulfilled__c.field-meta.xml
<CustomField>
    <fullName>Date_Fulfilled__c</fullName>
    <formula>DATEVALUE( Date_Time_License_Fulfilled__c )</formula>
    <label>Date Fulfilled</label>
    <type>Date</type>
</CustomField>