unpackaged/main/default/objects/Opportunity/fields/Date_of_License_Approval__c.field-meta.xml
<CustomField>
    <fullName>Date_of_License_Approval__c</fullName>
    <label>Date of License Approval</label>
    <type>Date</type>
</CustomField>