unpackaged/main/default/objects/Opportunity/fields/Date_of_License_Approval_Submission__c.field-meta.xml
<CustomField>
    <fullName>Date_of_License_Approval_Submission__c</fullName>
    <label>Date of License Approval Submission</label>
    <type>Date</type>
</CustomField>