unpackaged/main/default/objects/Opportunity/fields/Date_of_Order_Cancellation__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Order_Cancellation__c</fullName>
    <label>Date of Order Cancellation</label>
    <type>Date</type>
</CustomField>