unpackaged/main/default/objects/Opportunity/fields/Date_of_Project_Creation_Request__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Project_Creation_Request__c</fullName>
    <label>Date of Project Creation Request</label>
    <type>DateTime</type>
</CustomField>