unpackaged/main/default/objects/Opportunity/fields/Date_Signed_By_Customer__c.field-meta.xml
<CustomField>
    <fullName>Date_Signed_By_Customer__c</fullName>
    <description>Field to track the date license agreements have been signed by the Customer</description>
    <label>Date Signed By Customer</label>
    <type>Date</type>
</CustomField>