unpackaged/main/default/objects/Opportunity/fields/Date_Taken_Care_Of_By_Customer__c.field-meta.xml
<CustomField>
    <fullName>Date_Taken_Care_Of_By_Customer__c</fullName>
    <label>Date Taken Care Of By Customer</label>
    <type>Date</type>
</CustomField>