unpackaged/main/default/objects/Opportunity/fields/Date_Time_License_Fulfilled__c.field-meta.xml
<CustomField>
    <fullName>Date_Time_License_Fulfilled__c</fullName>
    <label>Date/Time License Fulfilled</label>
    <type>DateTime</type>
</CustomField>