unpackaged/main/default/objects/Opportunity/fields/Date_Time_of_License_Request__c.field-meta.xml
<CustomField>
    <fullName>Date_Time_of_License_Request__c</fullName>
    <label>Date/Time of License Request</label>
    <type>DateTime</type>
</CustomField>