unpackaged/main/default/objects/Opportunity/fields/Days_to_Close_Date__c.field-meta.xml
<CustomField>
    <fullName>Days_to_Close_Date__c</fullName>
    <description>Field will calculate the number of days until the projected close date.  Formula will be used to change the probability associated with the opportunties.</description>
    <formula>CloseDate  -  TODAY()</formula>
    <label>Days to Close Date</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>