unpackaged/main/default/objects/Opportunity/fields/Days_to_Decommission__c.field-meta.xml
<CustomField>
    <fullName>Days_to_Decommission__c</fullName>
    <description>Field that will track the number of days before the decommission date for a particulat modular.  Will trigger the tasks of sending DeCommission Scheduled Notice as well as the actual order to Operations to cut off</description>
    <formula>Module_Deactivation_Date__c  - TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days to Decommission</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>