unpackaged/main/default/objects/Opportunity/fields/Days_to_Expiration__c.field-meta.xml
<CustomField>
    <fullName>Days_to_Expiration__c</fullName>
    <description>FIeld that will calculate the days to expiration date for any opportunity.  Field will trigger workflow automation</description>
    <formula>Contract_Expiration__c - TODAY()</formula>
    <label>Days to Expiration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>