unpackaged/main/default/objects/Opportunity/fields/Days_To_Implementation_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Days_To_Implementation_Start_Date__c</fullName>
    <formula>Customer_Expectation_Project_Start__c  -  TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days To Implementation Start Date</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>