unpackaged/main/default/objects/Opportunity/fields/Deposit_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Deposit_Invoice__c</fullName>
    <description>Finance will use to document the Deposit Invoice # for ADS Validation Project</description>
    <label>Deposit Invoice #</label>
    <length>8</length>
    <type>Text</type>
</CustomField>