unpackaged/main/default/objects/Opportunity/fields/Deposit_Invoice_Date__c.field-meta.xml
<CustomField>
    <fullName>Deposit_Invoice_Date__c</fullName>
    <label>Deposit Invoice Date</label>
    <type>Date</type>
</CustomField>