unpackaged/main/default/objects/Opportunity/fields/Device_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Device_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to list of devices</description>
    <label>Device</label>
    <referenceTo>Devices__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>