unpackaged/main/default/objects/Opportunity/fields/Discount_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Discount_Percentage__c</fullName>
    <description>Displays the percentage that will be subtracted from the total amount of the opportunity.</description>
    <inlineHelpText>If the customer is getting a discount on this opportunity, enter the amount here. For example, if the discount is ten percent, enter the whole number 10.</inlineHelpText>
    <label>Discount Percentage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>