unpackaged/main/default/objects/Opportunity/fields/Documented_By__c.field-meta.xml
<CustomField>
    <fullName>Documented_By__c</fullName>
    <label>Documented By</label>
    <length>50</length>
    <type>Text</type>
</CustomField>