unpackaged/main/default/objects/Opportunity/fields/EMR__c.field-meta.xml
<CustomField>
    <fullName>EMR__c</fullName>
    <label>EMR</label>
    <length>255</length>
    <type>Text</type>
</CustomField>