unpackaged/main/default/objects/Opportunity/fields/EMR_HER_LIS__c.field-meta.xml
<CustomField>
    <fullName>EMR_HER_LIS__c</fullName>
    <label>EMR/ HER/ LIS</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>