unpackaged/main/default/objects/Opportunity/fields/Enterprise_Account_Manager__c.field-meta.xml
<CustomField>
    <fullName>Enterprise_Account_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Enterprise Account Innovation Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities2</relationshipName>
    <type>Lookup</type>
</CustomField>