unpackaged/main/default/objects/Opportunity/fields/Enterprise_Account_Manager_is_User__c.field-meta.xml
<CustomField>
    <fullName>Enterprise_Account_Manager_is_User__c</fullName>
    <formula>IF( Enterprise_Account_Manager__c =$User.Id ,1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Enterprise Account Manager is User</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>