unpackaged/main/default/objects/Opportunity/fields/Expected_Project_Completion_Date_del__c.field-meta.xml
<CustomField>
    <fullName>Expected_Project_Completion_Date_del__c</fullName>
    <description>Field to track the customers' expectation around the completion of resulting project</description>
    <label>Expected Project Completion Date</label>
    <type>Date</type>
</CustomField>