unpackaged/main/default/objects/Opportunity/fields/Expectyed_Annualized_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Expectyed_Annualized_Revenue__c</fullName>
    <formula>Annualized_Amount__c  *  Probability</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Expected Annualized Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>