unpackaged/main/default/objects/Opportunity/fields/Expiration_Year_Quarter__c.field-meta.xml
<CustomField>
    <fullName>Expiration_Year_Quarter__c</fullName>
    <description>Formula to display the Quarter and Year of contract expiration.   Will be used to show Renewal forecast</description>
    <formula>TEXT(YEAR( Contract_Expiration__c ))&amp;"-"&amp;Quarter_of_Expiration__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Expiration Year Quarter</label>
    <type>Text</type>
</CustomField>