unpackaged/main/default/objects/Opportunity/fields/F_Days_Billing_Milestone_To_Year_End__c.field-meta.xml
<CustomField>
    <fullName>F_Days_Billing_Milestone_To_Year_End__c</fullName>
    <formula>DATEVALUE(TEXT(YEAR(Today())) + "-12-31") - Billing_Milestone_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Billing Milestone To Year End</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>