unpackaged/main/default/objects/Opportunity/fields/F_Days_Signing_to_Billing_Milestone__c.field-meta.xml
<CustomField>
    <fullName>F_Days_Signing_to_Billing_Milestone__c</fullName>
    <formula>Billing_Milestone_Date__c - Date_Signed_By_Customer__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Signing to Billing Milestone</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>