unpackaged/main/default/objects/Opportunity/fields/F_Recog_at_Billing_Milestone__c.field-meta.xml
<CustomField>
    <fullName>F_Recog_at_Billing_Milestone__c</fullName>
    <formula>(F_Days_Signing_to_Billing_Milestone__c  *  F_Recog_Per_Day__c ) +  Implementation_Fees__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Recog at Billing Milestone</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>