unpackaged/main/default/objects/Opportunity/fields/F_Recog_Per_Day__c.field-meta.xml
<CustomField>
    <fullName>F_Recog_Per_Day__c</fullName>
    <formula>Annualized_Amount__c  / 365</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Recog Per Day</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>