unpackaged/main/default/objects/Opportunity/fields/F_Revenue_Recog_Remainder_of_1st_year__c.field-meta.xml
<CustomField>
    <fullName>F_Revenue_Recog_Remainder_of_1st_year__c</fullName>
    <formula>F_Recog_Per_Day__c  *  F_Days_Billing_Milestone_To_Year_End__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Revenue Recog Remainder of 1st year</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>