unpackaged/main/default/objects/Opportunity/fields/F_Year1_Recog__c.field-meta.xml
<CustomField>
    <fullName>F_Year1_Recog__c</fullName>
    <formula>F_Recog_at_Billing_Milestone__c  +  F_Revenue_Recog_Remainder_of_1st_year__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Year1 Recog</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>