unpackaged/main/default/objects/Opportunity/fields/Finance_Files_Show_as_Incomplete__c.field-meta.xml
<CustomField>
    <fullName>Finance_Files_Show_as_Incomplete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Finance Files Show as Incomplete</label>
    <type>Checkbox</type>
</CustomField>