unpackaged/main/default/objects/Opportunity/fields/First_Year_Value__c.field-meta.xml
<CustomField>
    <fullName>First_Year_Value__c</fullName>
    <formula>IF(AND( ISPICKVAL(New_Contract_or_Renewal__c, "New Business"), Annualized_Amount_Rounded__c  +  Implementation_Fees__c &gt;  Amount), Amount,CASE(
 New_Contract_or_Renewal__c, 
"New Business", Annualized_Amount_Rounded__c  +  Implementation_Fees__c, 
"Renewal With Device Change", Implementation_Fees__c,
"Renewal With Platform Change(ie..Plus &gt; Freedom)", Implementation_Fees__c,
0))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>1st Year Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>