unpackaged/main/default/objects/Opportunity/fields/Flu_Volume__c.field-meta.xml
<CustomField>
    <fullName>Flu_Volume__c</fullName>
    <label>Flu Volume</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>