unpackaged/main/default/objects/Opportunity/fields/Gateway__c.field-meta.xml
<CustomField>
    <fullName>Gateway__c</fullName>
    <label>Gateway</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>