unpackaged/main/default/objects/Opportunity/fields/GluNonGluSegment__c.field-meta.xml
<CustomField>
    <fullName>GluNonGluSegment__c</fullName>
    <formula>CASE(Segment_By_Analyte__c , "Blood Glucose", "Glucose", "Non-Glucose")</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Glucose or Non-Glucose</label>
    <type>Text</type>
</CustomField>