unpackaged/main/default/objects/Opportunity/fields/Has_Signer_Been_Identified__c.field-meta.xml
<CustomField>
    <fullName>Has_Signer_Been_Identified__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox that will be populated by workflow. Will be used in validation rule to make sure that license approval doesn't begin without documenting who signed the license.</description>
    <label>Has Signer Been Identified</label>
    <type>Checkbox</type>
</CustomField>