unpackaged/main/default/objects/Opportunity/fields/hasContract__c.field-meta.xml
<CustomField>
    <fullName>hasContract__c</fullName>
    <description>True when contract initiated is populated</description>
    <formula>IF( isnull(Contract_Initiated__c),FALSE, TRUE)</formula>
    <label>hasContract</label>
    <type>Checkbox</type>
</CustomField>