unpackaged/main/default/objects/Opportunity/fields/hasInformatics_Call_Demo__c.field-meta.xml
<CustomField>
    <fullName>hasInformatics_Call_Demo__c</fullName>
    <formula>IF( isnull(Informatics_Call_Demo__c),FALSE, TRUE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>hasInformatics Call/Demo</label>
    <type>Checkbox</type>
</CustomField>