unpackaged/main/default/objects/Opportunity/fields/hasProposal__c.field-meta.xml
<CustomField>
    <fullName>hasProposal__c</fullName>
    <description>True when date of proposal is populated</description>
    <formula>IF( isnull(Date_of_Proposal__c),FALSE, TRUE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>hasProposal</label>
    <type>Checkbox</type>
</CustomField>