unpackaged/main/default/objects/Opportunity/fields/High_Priority_For_Immediate_Assignment__c.field-meta.xml
<CustomField>
    <fullName>High_Priority_For_Immediate_Assignment__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field that ISAs can use to notate that a opportunity needs immediate project review and creation.  This will give improved visability as well as mark the associated project as high priority through workflow</description>
    <label>High Priority- For Immediate Assignment</label>
    <type>Checkbox</type>
</CustomField>