unpackaged/main/default/objects/Opportunity/fields/ID_AE_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>ID_AE_Email_Address__c</fullName>
    <label>ID AE Email Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>