unpackaged/main/default/objects/Opportunity/fields/Implementation_Fees__c.field-meta.xml
<CustomField>
    <fullName>Implementation_Fees__c</fullName>
    <label>Implementation Fees</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>