unpackaged/main/default/objects/Opportunity/fields/Implementation_Project__c.field-meta.xml
<CustomField>
    <fullName>Implementation_Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Associate Implementation Project used for contingent pricing</inlineHelpText>
    <label>Implementation Project</label>
    <referenceTo>Implementation_Project__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>