unpackaged/main/default/objects/Opportunity/fields/Informatics_Call__c.field-meta.xml
<CustomField>
    <fullName>Informatics_Call__c</fullName>
    <description>True when Informatics call/demo is populated</description>
    <formula>IF(Informatics_Call_Demo__c &lt;&gt; NULL, TRUE, FALSE)</formula>
    <label>Informatics Call</label>
    <type>Checkbox</type>
</CustomField>