unpackaged/main/default/objects/Opportunity/fields/Informatics_Call_Demo__c.field-meta.xml
<CustomField>
    <fullName>Informatics_Call_Demo__c</fullName>
    <label>Informatics Call/Demo</label>
    <type>Date</type>
</CustomField>