unpackaged/main/default/objects/Opportunity/fields/Informatics_Discount_License_Fees__c.field-meta.xml
<CustomField>
    <fullName>Informatics_Discount_License_Fees__c</fullName>
    <description>Field that will track Alere Informatics discounting of license fees.   Will be used in situations where ACSG and Al are working together on strategic accounts and both groups are contributing towards discounts.</description>
    <label>Informatics Discount-License Fees</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>