unpackaged/main/default/objects/Opportunity/fields/Informatics_Executive_IE__c.field-meta.xml
<CustomField>
    <fullName>Informatics_Executive_IE__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Informatics Executive (IE)</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>