unpackaged/main/default/objects/Opportunity/fields/Informatics_Territory__c.field-meta.xml
<CustomField>
    <fullName>Informatics_Territory__c</fullName>
    <description>Picklist field that will be populated automatically, to mark the territory associated opportunity's account.   Will be used in Opportunity sharing rules to open up vieweship of opportunities to all opportunitties within a opportunity</description>
    <label>Informatics Territory</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Territory_List</valueSetName>
    </valueSet>
</CustomField>