unpackaged/main/default/objects/Opportunity/fields/InformaticsTerritoryQ1Q218__c.field-meta.xml
<CustomField>
    <fullName>InformaticsTerritoryQ1Q218__c</fullName>
    <formula>TEXT( Account.Informatics_Territory_Q1Q218__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>InformaticsTerritoryQ1Q218</label>
    <type>Text</type>
</CustomField>