unpackaged/main/default/objects/Opportunity/fields/Installation_Service_Request__c.field-meta.xml
<CustomField>
    <fullName>Installation_Service_Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Installation Service Request</label>
    <referenceTo>Upgrade_Request__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>