unpackaged/main/default/objects/Opportunity/fields/Instructions__c.field-meta.xml
<CustomField>
    <fullName>Instructions__c</fullName>
    <formula>"Please Pick the device the customer is interested in below.  If the device is not listed, select 'Other Device' and then type the device name in the 'Closed Lost Comments' field. The PLM team will add the device to the list"</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Instructions</label>
    <type>Text</type>
</CustomField>