unpackaged/main/default/objects/Opportunity/fields/IntegrationNeeds__c.field-meta.xml
<CustomField>
    <fullName>IntegrationNeeds__c</fullName>
    <label>Integration Needs</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ERP</fullName>
            </value>
            <value>
                <fullName>Accounting</fullName>
            </value>
            <value>
                <fullName>CRM</fullName>
            </value>
            <value>
                <fullName>HR</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>