unpackaged/main/default/objects/Opportunity/fields/Is_Exhibit_A_required_this_year__c.field-meta.xml
<CustomField>
    <fullName>Is_Exhibit_A_required_this_year__c</fullName>
    <description>Field that will track whether or not an account needs to sign a new v4.0 exhibit A (with terms allowing for price increase) as part of renewal.  Default will be no.</description>
    <label>New License Addendum Required ?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>