unpackaged/main/default/objects/Opportunity/fields/ISA_Formula__c.field-meta.xml
<CustomField>
    <fullName>ISA_Formula__c</fullName>
    <formula>CASE( Owner.CommunityNickname , 
"Kevin Umphlett", "Boni Boutelle-Jones", 
"Therese Whaley", "Boni Boutelle-Jones", 
"Eric Grahek", "Jack Yancey", 
"Grace Hoenig", "Jack Yancey", 
"Tom Travis", "Billy Anderson", 
"Michael Kulpa", "Billy Anderson", 
"Robb Kozleski", "Kristen White", 
"Michael Fulkerson", "Kristen White", 
" ")</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ISA</label>
    <type>Text</type>
</CustomField>