unpackaged/main/default/objects/Opportunity/fields/isLost__c.field-meta.xml
<CustomField>
    <fullName>isLost__c</fullName>
    <formula>IF(TEXT(StageName) = 'Closed Lost', TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>isLost</label>
    <type>Checkbox</type>
</CustomField>