unpackaged/main/default/objects/Opportunity/fields/isWon__c.field-meta.xml
<CustomField>
    <fullName>isWon__c</fullName>
    <description>Checked true if opportunity is closed/won</description>
    <formula>IF(TEXT(StageName) = 'Closed Won', TRUE, FALSE)</formula>
    <label>isWon</label>
    <type>Checkbox</type>
</CustomField>