unpackaged/main/default/objects/Opportunity/fields/LA_Did_Alere_Sign_the_Contract_First__c.field-meta.xml
<CustomField>
    <fullName>LA_Did_Alere_Sign_the_Contract_First__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field that will track if Alere signed the signed agreement first</description>
    <label>Did Alere Sign the Contract First</label>
    <type>Checkbox</type>
</CustomField>