unpackaged/main/default/objects/Opportunity/fields/LA_License_Needs_Countersignature__c.field-meta.xml
<CustomField>
    <fullName>LA_License_Needs_Countersignature__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field that will track if license needs countersignature or not</description>
    <label>License Needs Countersignature</label>
    <type>Checkbox</type>
</CustomField>