unpackaged/main/default/objects/Opportunity/fields/Latest_Note__c.field-meta.xml
<CustomField>
    <fullName>Latest_Note__c</fullName>
    <description>New field to store the latest notes and next step field.  The field we were using was the standard field called "next step"  which had a 255 charatcer limit and could not be edited....</description>
    <label>Latest Note</label>
    <length>500</length>
    <type>Html</type>
</CustomField>