unpackaged/main/default/objects/Opportunity/fields/License_Fees__c.field-meta.xml
<CustomField>
    <fullName>License_Fees__c</fullName>
    <formula>Amount  -  Implementation_Fees__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>License Fees</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>