unpackaged/main/default/objects/Opportunity/fields/License_Prep_Month__c.field-meta.xml
<CustomField>
    <fullName>License_Prep_Month__c</fullName>
    <formula>MONTH(DATEVALUE( Date_Time_License_Fulfilled__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>License Prep Month</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>