unpackaged/main/default/objects/Opportunity/fields/License_Prep_Year__c.field-meta.xml
<CustomField>
    <fullName>License_Prep_Year__c</fullName>
    <formula>YEAR( DATEVALUE( Date_Time_License_Fulfilled__c ))</formula>
    <label>License Prep Year</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>