unpackaged/main/default/objects/Opportunity/fields/License_Prep_Year_Month__c.field-meta.xml
<CustomField>
    <fullName>License_Prep_Year_Month__c</fullName>
    <formula>TEXT( License_Prep_Year__c )&amp;"-"&amp; TEXT( License_Prep_Month__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>License Prep Year Month</label>
    <type>Text</type>
</CustomField>