unpackaged/main/default/objects/Opportunity/fields/License_Request_Fulfilled__c.field-meta.xml
<CustomField>
    <fullName>License_Request_Fulfilled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>License Request Fulfilled</label>
    <type>Checkbox</type>
</CustomField>