unpackaged/main/default/objects/Opportunity/fields/License_Submission_Month_End_Date__c.field-meta.xml
<CustomField>
    <fullName>License_Submission_Month_End_Date__c</fullName>
    <formula>IF( 
MONTH( Date_of_License_Approval_Submission__c ) = 12, 
DATE( YEAR( Date_of_License_Approval_Submission__c ), 12, 31 ), 
DATE( YEAR( Date_of_License_Approval_Submission__c ), MONTH ( Date_of_License_Approval_Submission__c ) + 1, 1 ) - 1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>License Submission Month End Date</label>
    <type>Date</type>
</CustomField>