unpackaged/main/default/objects/Opportunity/fields/License_Term_Years__c.field-meta.xml
<CustomField>
    <fullName>License_Term_Years__c</fullName>
    <description>Field to track the license term associated with an opportunity</description>
    <label>License Term: years</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>